Fix height so it cannot cut off star image on about section.

--- a/public/browserapp/css/src/machinimareload.less
+++ b/public/browserapp/css/src/machinimareload.less
@@ -206,6 +206,12 @@
             }
 
             #sayso-section-body {
+                #sayso-about-help-tab-one {
+                    li#sayso-about-help-experience {
+                        min-height: 45px;
+                        height: 45px;
+                    }
+                }
             }
         }
 
